--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ nav {
     background-color: #ffffff;
     border-bottom: 1px solid #dddddd;
     padding: 10px 0;
+
 }
 
 nav ul {
@@ -36,13 +37,21 @@ nav a:hover {
 }
 
 /* Sections */
-header, section, footer {
+header, section{
     max-width: 800px;
     margin: 20px auto;
     background: #ffffff;
     padding: 20px;
     border-radius: 6px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+}
+
+/* Sections */
+footer {
+    max-width: 800px;
+    margin: 20px auto;
+    height: 10px;
+    border-radius: 6px;
 }
 
 /* Headings */
